# SET

A1/: results.csv
A2/: ArrayGenerator.cpp  MakeData.cpp  SortTester.cpp  hybrid_almost_10.txt  hybrid_almost_200.txt  hybrid_almost_25.txt  hybrid_almost_5.txt  hybrid_almost_50.txt  hybrid_random_100.txt  hybrid_random_5.txt  hybrid_random_50.txt  hybrid_reverse_200.txt  hybrid_reverse_25.txt  merge-insert.cpp  standard_almost.txt  standard_random.txt
A3/: MakeData.cpp  SortTester.cpp  introsort.cpp  quick_hybrid_random.txt  quick_hybrid_reverse.txt  quick_standard_almost.txt  quick_standard_random.txt
SET3/A1/: circles.cpp
SET3/A2/: hybrid_almost_100.txt  hybrid_random_10.txt  hybrid_random_200.txt  hybrid_random_25.txt  hybrid_reverse_10.txt  hybrid_reverse_100.txt  hybrid_reverse_5.txt  hybrid_reverse_50.txt  standard_reverse.txt
SET3/A3/: quick_hybrid_almost.txt  quick_standard_reverse.txt
SET5/: CMakeLists.txt  README.md  experiment.cpp  hash_func_gen.cpp  hash_func_gen.h  hyperloglog.cpp  hyperloglog.h  hyperloglog_packed.cpp  hyperloglog_packed.h  plot.py  random_stream_gen.cpp  random_stream_gen.h  run_p10.csv  run_p12.csv  run_p12_packed.csv  run_p14.csv  summary_p10.csv  summary_p12.csv  summary_p12_packed.csv  summary_p14.csv
SET5/report/: Отчет.docx
SET5/report/p10/: analysis.txt
SET5/report/p12_packed/: analysis.txt
SET5/report/p14/: analysis.txt
